--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "component-docs.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mui-storyblok.github.io/component-docs",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "fuse.js": "^6.4.3",
+    "gh-pages": "^3.1.0",
     "mui-storyblok": "^1.1.13-beta-6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
