--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@testing-library/user-event": "^12.2.2",
     "fuse.js": "^6.4.3",
     "gh-pages": "^3.1.0",
-    "mui-storyblok": "^1.1.13-beta-6",
+    "mui-storyblok": "^1.1.13-beta-7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
